
 [build-system]
 requires = ["setuptools>=68", "wheel"]
 build-backend = "setuptools.build_meta"

 [project]
 name = "topology"
 version = "0.0.0"
 requires-python = ">=3.10"
 dependencies = [
   "geopandas>=0.14",
   "tigris",
   "shapely>=2.0",
   "pyproj>=3.6",
   "py3dep",
   "xarray>=2023.12.0",
   "rioxarray>=0.15.0",
   "rasterio>=1.3.9",
   "numpy>=1.26",
   "scipy>=1.11",
   "scikit-image>=0.22",
   "trimesh>=4.0.0",
   "svgpathtools>=1.6.1",
 ]

 [tool.setuptools]
 py-modules = ["export_state_svg", "svg_to_stl", "dem_to_stl"]
